; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_packet_factory.c_make_ble_write_host_support.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_packet_factory.c_make_ble_write_host_support.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HCI_WRITE_LE_HOST_SUPPORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32)* @make_ble_write_host_support to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @make_ble_write_host_support(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 2, i32* %6, align 4
  %8 = load i32, i32* @HCI_WRITE_LE_HOST_SUPPORT, align 4
  %9 = call i32* @make_command(i32 %8, i32 2, i32** %5)
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @UINT8_TO_STREAM(i32* %10, i32 %11)
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @UINT8_TO_STREAM(i32* %13, i32 %14)
  %16 = load i32*, i32** %7, align 8
  ret i32* %16
}

declare dso_local i32* @make_command(i32, i32, i32**) #1

declare dso_local i32 @UINT8_TO_STREAM(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
